# mpi

./: .gitignore  Makefile.am  README  analyze.sh  configure.ac  data_aa  data_test  distributed_plot_parallel_and_serial_times_over_n.gnu  distributed_plot_parallel_and_serial_times_over_p.gnu  distributed_plot_speedup_over_n.gnu  distributed_plot_speedup_over_p.gnu  local_plot_parallel_and_serial_times_over_n.gnu  local_plot_parallel_and_serial_times_over_p.gnu  local_plot_speedup_over_n.gnu  local_plot_speedup_over_p.gnu  main.cpp  mm  mpi.sln  mpi.vcxproj  plot_parallel_and_serial_times_over_n.gnu  plot_parallel_and_serial_times_over_p.gnu  plot_speedup_over_n.gnu
m4/: ax_boost_mpi.m4
src/: Makefile.am  main.cpp
